fix(bug): std::formatter support for qls::string_param (#44)

--- a/.github/workflows/cpp-linter.yml
+++ b/.github/workflows/cpp-linter.yml
@@ -8,7 +8,7 @@ on:
     paths: ['**.c', '**.cpp', '**.h', '**.hpp', '**.cxx', '**.hxx', '**.cc', '**.hh', '**CMakeLists.txt', 'meson.build', '**.cmake']
 
 permissions:
-  issues: write
+  issue: write
   pull-requests: write
   contents: read
 
