feat: update readme.md and string_param (#45)

--- a/.github/workflows/cpp-linter.yml
+++ b/.github/workflows/cpp-linter.yml
@@ -8,9 +8,8 @@ on:
     paths: ['**.c', '**.cpp', '**.h', '**.hpp', '**.cxx', '**.hxx', '**.cc', '**.hh', '**CMakeLists.txt', 'meson.build', '**.cmake']
 
 permissions:
-  issue: write
+  issues: write
   pull-requests: write
-  contents: read
 
 jobs:
   cpp-linter:
