fix: string_param and cpp-linter (#47)

--- a/.github/workflows/cpp-linter.yml
+++ b/.github/workflows/cpp-linter.yml
@@ -10,6 +10,7 @@ on:
 permissions:
   issues: write
   pull-requests: write
+  contents: read
 
 jobs:
   cpp-linter:
@@ -53,7 +54,7 @@ jobs:
           style: 'file'
           tidy-checks: ''
           extra-args: '-std=c++23'
-          step-summary: true
+          thread-comments: ${{ github.event_name == 'pull_request' && 'update' }}
 
       - name: Fail fast?!
         if: steps.linter.outputs.clang-format-checks-failed > 0
